Fix gaps and adjust styles especially on mobile view in gallery page + Add more popular chips and make it scrollable

--- a/src/app/features/landing/pages/gallery/gallery.component.scss
+++ b/src/app/features/landing/pages/gallery/gallery.component.scss
@@ -93,6 +93,7 @@
         max-width: 1200px;
         margin: 0 auto;
         padding: 2rem;
+        padding-top: 3rem;
 
     }
 
@@ -248,6 +249,7 @@
         .card-grid {
             grid-template-columns: auto;
             padding: 10px;
+            padding-top: 2.5rem;
         }
 
         .card-title {
@@ -758,6 +760,11 @@
 
     .hero-tabs {
         // justify-content: flex-start;
+        gap: 3px;
+        
+        button {
+            padding: 10px 14px;
+        }
     }
 }
 
@@ -861,6 +868,10 @@
         max-width: 442px !important;
         height: 39px !important;
         cursor: pointer;
+
+        @media screen and (max-width: 700px) {
+            max-width: 350px !important;
+        }
 
         @media screen and (max-width: 448px) {
             max-width: 345px !important;
@@ -1394,6 +1405,22 @@
     position: absolute;
     top: 87%;
     gap: 5px;
+    max-width: 442px;
+    width: 100%;
+    overflow-x: scroll;
+
+    // simple custom scroll
+    padding-bottom: 5px;
+
+    &::-webkit-scrollbar { width: 3px; height: 4px; }
+    &::-webkit-scrollbar-track { background: transparent; }
+    &::-webkit-scrollbar-thumb {
+        background: #d9d9d9;
+        border-radius: 999px;
+        border: none;
+    }
+    &::-webkit-scrollbar-thumb:hover { background: #dee2e6; }
+
 
     &__chip {
         display: flex;
@@ -1404,6 +1431,8 @@
         border-radius: 20px;
         padding: 3px 6px;
         background-color: white;
+        text-wrap-mode: nowrap;
+        min-width: fit-content;
 
         transition: all .3s;
 
